--- a/app/index.html
+++ b/app/index.html
@@ -10,20 +10,25 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/normalize-css/normalize.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+    <!-- CSS Vendors -->
+    <!-- build:css styles/vendor.min.css -->
+    <link rel="stylesheet" type="text/css" href="./styles/concat/vendor.css"/>
+    <!-- /build -->
+    <!-- Styles -->
+    <!-- build:css styles/main.min.css -->
+     <link rel="stylesheet" type="text/css" href="./styles/main.css"/>
+    <!-- /build -->
+
+    <!-- Modernizr -->
+    <!-- build:css scripts/lib/modernizr.min.js -->
+    <script src="./scripts/lib/modernizr.min.js"></script>
+    <!-- /build -->
+
   </head>
   <body>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
 
     <div class="container">
       <div class="header">
@@ -65,34 +70,21 @@
       </div>
     </div>
 
+    <!-- JS Vendor -->
+    <!-- build:js scripts/vendor.min.js -->
+    <script src="/scripts/concat/vendor.js"></script>
+    <!-- /build -->
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <script src="/bower_components/modernizr-custom.min.js"></script>
-    <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+    <!-- JS Plugins -->
+    <!-- build:js scripts/plugins.min.js -->
+    <script src="/scripts/concat/plugins.js"></script>
+    <!-- /build -->
 
+    <!-- Scripts -->
+    <!-- build:js scripts/main.min.js -->
+    <script src="/scripts/main.js"></script>
+    <!-- /build -->
 
-    <!-- build:js(.) scripts/plugins.js -->
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
-    <!-- endbuild -->
-
-
-    <!-- build:js(.) scripts/scripts.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
