--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Starter kit - Sass + Bourbon library</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
 
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
